# iDSK20

./: .gitignore  CHANGELOG_RENAME.md  CMakeLists.txt  CPC_SYNTAX_COMPLETE.md  DOCUMENTATION_UPDATE.md  Dockerfile.linux-arm64  Dockerfile.linux-x64  Dockerfile.macos-x64  FINAL_SUMMARY.md  HELP_CPC_SYNTAX.md  Makefile.cross  README.md  build-local-cross.sh  build-multiplatform.sh  build.sh  test.dsk  test2.bas  test_raw.txt
.github/workflows/: build.yml
cmake/: macos-x64-toolchain.cmake
doc/: COMANDOS.md  COMPILACION.md  INSTALACION.md  INTRODUCCION.md  PROBLEMAS.md  README.md  TIPOS.md  VARIABLES.md  WRAPPERS.md
src/: Basic.cpp  BitmapCPC.cpp  BitmapCPC.h  Dams.cpp  Desass.cpp  GestDsk.cpp  GestDsk.h  Main.cpp  Main.h  Outils.cpp  Outils.h  ViewFile.cpp  endianPPC.cpp
test/: demo.bas  demo.dsk  disc_testing.sh
